Fixes Header Button spacing

--- a/styles/MenuBar.module.css
+++ b/styles/MenuBar.module.css
@@ -25,6 +25,7 @@
 }
 
 .menues button {
+  margin: 0;
   margin-left: 3.5vw;
 }
 
